# bank

./: .coverage  .flake8  README.md  main.py  pyproject.toml  requirements.txt  test_masks.py
data/: operations.json
src/: decorators.py  external_api.py  functionality.py  generators.py  masks.py  my_funcs.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_functionality.py  test_generators.py  test_masks.py  test_my_funcs.py  test_processing.py  test_utils.py  test_widget.py
